# NRFU_AI_support

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  REQUIREMENTS.md  alembic.ini  docker-compose.yml  junie_context.md  pyproject.toml  tasks.md
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  logger.py
app/db/: session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: checklist.py  pdf_parsing.py  scaffolds.py  storage.py
migrations/: env.py
migrations/versions/: 5b369b85300e_initial_migration_with_.py  ab50dfe9e023_add_call_metadata_and_calldocument_model.py  cbc7783e105e_add_full_text_and_metadata_to_.py  dc135f8e1a58_add_call_specific_rule_fields.py  f4b28d40f07f_add_passage_and_evidence_fields_to_.py
scripts/: seed_data.py
tests/: test_checklist.py  test_main.py  test_pdf.py  test_rule_grounding.py
